[package]
name = "neuro"
version = "0.1.0"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Neuro is a deep learning library that runs on the GPU."
edition = "2018"

documentation = "https://srenevey.github.io/neuro/api"
homepage = "https://srenevey.github.io/neuro/"
repository = "https://github.com/srenevey/neuro"
readme = "README.md"

keywords = ["deep learning", "machine learning", "neural network"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
arrayfire = "3.6.2"
csv = "1.1.1"
rand = "0.7.0"
image = "0.22.2"
walkdir = "2.2.9"
byteorder = "1.3.2"
