[package]
name = "neuro"
version = "0.1.0"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "A deep learning library that runs on the GPU."
edition = "2018"

documentation = "https://srenevey.github.io/neuro/api"
homepage = "https://srenevey.github.io/neuro/"
repository = "https://github.com/srenevey/neuro"
readme = "README.md"

keywords = ["deep-learning", "machine-learning", "neural-networks", "cnn"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
arrayfire = "3.6.3"
csv = "1.1.1"
rand = "0.7.0"
image = "0.22.2"
walkdir = "2.2.9"
indicatif = "0.13.0"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust" }