[package]
name = "neuro"
version = "0.1.0"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "A deep learning library that runs on the GPU."
edition = "2018"

documentation = "https://srenevey.github.io/neuro/api/neuro/"
homepage = "https://srenevey.github.io/neuro/"
repository = "https://github.com/srenevey/neuro"
readme = "README.md"

keywords = ["deep-learning", "machine-learning", "neural-networks", "cnn"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
arrayfire = "3.6.3"
csv = "1.1.3"
rand = "0.7.3"
image = "0.23.0"
walkdir = "2.3.1"
indicatif = "0.14.0"
hdf5 = "0.6.0"
hdf5-sys = "0.6.0"